# moex_api

./: MOEX_main.py  dev-requirements.txt  pyproject.toml  requirements.txt
moex_api/: __init__.py  candles.py  csv_candles.py  date_utils.py  schemas.py
src/: __init__.py
src/moex_api/: __init__.py  moex.py
tests/: conftest.py  dataset.py  my_logging.py  schemas.py  test_config.py  test_csv_candles.py
tests/candles/: CNTL_full_range_exists.csv  CNTL_gap_in_the_beginning.csv  CNTL_gap_in_the_end.csv  POSI_gaps_everywhere.csv  SBER_full_range_exists.csv
